[tool.poetry]
name = "alerter"
version = "0.1.0"
description = "A tool focus on error reporting for your application"
authors = ["long2ice <long2ice@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/long2ice/alerter"
repository = "https://github.com/long2ice/alerter.git"
documentation = "https://github.com/long2ice/alerter"
keywords = ["sentry", "error", "Alert"]
packages = [
    { include = "alerter" }
]
include = ["CHANGELOG.md", "LICENSE", "README.md"]

[tool.poetry.dependencies]
python = "^3.7"
better-exceptions = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
isort = "*"
black = "*"
pytest = "*"
pytest-xdist = "*"
pytest-asyncio = "*"
mypy = "*"
bandit = "*"
types-requests = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
